make adjustments in content - logo and text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Mary Zam - Software Engineer at Atlassian. Simple solutions to complex software problems." />
     <meta property="og:title" content="Mary Zam | Software Engineer" />
     <meta property="og:description" content="Software Engineer at Atlassian. Simple solutions to complex software problems." />
-    <meta property="og:image" content="assets/photo.jpg" />
+    <meta property="og:image" content="assets/photo.png" />
     <meta property="og:type" content="website" />
     <title>Mary Zam | Software Engineer</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>&#128187;</text></svg>" />
@@ -23,7 +23,7 @@
         <div class="hero__photo-ring" aria-hidden="true"></div>
         <img
           class="hero__photo"
-          src="assets/photo.jpg"
+          src="assets/photo.png"
           alt="Mary Zam"
           loading="lazy"
         />
@@ -38,12 +38,12 @@
     <!-- About -->
     <main class="about">
       <h2 class="about__heading">What I Do</h2>
-      <p class="about__role">Software Engineer at <span class="about__company">Atlassian</span></p>
-      <p class="about__location">Auckland, New Zealand</p>
+      <p class="about__role">Principal Engineer at <span class="about__company">Atlassian</span></p>
+      <p class="about__location">Canterbury, New Zealand</p>
       <div class="about__badges">
-        <span class="badge">AWS Certified Solutions Architect</span>
+        <span class="badge">Cloud Architecture</span>
         <span class="badge">Data Visualization</span>
-        <span class="badge">Viz for Social Good</span>
+        <span class="badge">Monitoring and Observability</span>
       </div>
     </main>
 
